--- a/app/src/main/res/layout/activity_cards_list.xml
+++ b/app/src/main/res/layout/activity_cards_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".CardListActivity">
 
     <ImageButton
         android:layout_width="40dp"
@@ -46,7 +46,7 @@
         android:layout_marginTop="15dp"
         android:text="돈 얼마인지 가져옴"
         android:textColor="#5163BF"
-        android:textSize="35dp"
+        android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/available" />
@@ -86,6 +86,8 @@
         app:layout_constraintTop_toBottomOf="@id/please" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
