--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -55,7 +55,7 @@
         android:layout_gravity="left"
         android:layout_marginStart="14dp"
         android:layout_marginTop="8dp"
-        android:text="$3,100.30"
+        android:text="$"
         android:textColor="@color/white"
         android:textSize="22dp"
         android:textStyle="bold"
@@ -69,7 +69,7 @@
         android:layout_gravity="right"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="14dp"
-        android:text="카드 이름?"
+        android:text="카드 이름"
         android:textColor="@color/white"
         android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="parent"
