--- a/app/src/main/res/layout/card_item2.xml
+++ b/app/src/main/res/layout/card_item2.xml
@@ -6,7 +6,7 @@
     android:layout_marginStart="15dp"
     android:layout_marginTop="15dp"
     android:layout_marginEnd="15dp"
-    android:background="@color/blue"
+    android:background="@color/bluesky"
     android:orientation="vertical">
 
     <TextView
@@ -44,7 +44,7 @@
         android:layout_marginTop="37dp"
         android:text="Your Balance"
         android:textColor="@color/white"
-        android:textSize="12dp"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_cardN" />
 
@@ -71,7 +71,7 @@
         android:layout_marginEnd="14dp"
         android:text="카드 이름"
         android:textColor="@color/white"
-        android:textSize="12dp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
