--- a/app/src/main/res/layout/card_item3.xml
+++ b/app/src/main/res/layout/card_item3.xml
@@ -6,7 +6,7 @@
     android:layout_marginStart="15dp"
     android:layout_marginTop="15dp"
     android:layout_marginEnd="15dp"
-    android:background="@color/blue"
+    android:background="@color/orange"
     android:orientation="vertical">
 
     <TextView
