--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#3F51B5</color>
-    <color name="bluesky">#8EDFEB</color>
+    <color name="lightblue">#8EDFEB</color>
     <color name="orange">#FF5722</color>
 
 </resources>
