--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,20 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="50dp"
-        android:text="이름 : "
+        android:text="이름"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/tv_dName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:text="이름"
-        android:textSize="20dp"
-        app:layout_constraintStart_toEndOf="@id/dName"
-        app:layout_constraintTop_toTopOf="@id/dName"
-        app:layout_constraintBottom_toBottomOf="@id/dName" />
 
     <TextView
         android:id="@+id/dCardN"
@@ -33,20 +23,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        android:text="카드번호 : "
+        android:text="카드번호"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dName" />
-    <TextView
-        android:id="@+id/tv_dCardN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:text="번호 번호"
-        android:textSize="20dp"
-        app:layout_constraintStart_toEndOf="@id/dCardN"
-        app:layout_constraintTop_toTopOf="@id/dCardN"
-        app:layout_constraintBottom_toBottomOf="@id/dCardN" />
 
     <TextView
         android:id="@+id/dPeriod"
@@ -54,21 +34,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        android:text="유효기간 :"
+        android:text="유효기간"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dCardN" />
 
-    <TextView
-        android:id="@+id/tv_dPeriod"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:text="기간 기간"
-        android:textSize="20dp"
-        app:layout_constraintStart_toEndOf="@id/dPeriod"
-        app:layout_constraintTop_toTopOf="@id/dPeriod"
-        app:layout_constraintBottom_toBottomOf="@id/dPeriod" />
 
     <TextView
         android:id="@+id/dCardViewType"
@@ -76,19 +46,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        android:text="카드 뷰타입 : "
+        android:text="카드 뷰타입"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dPeriod" />
-    <TextView
-        android:id="@+id/tv_dcard_view_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:text="뷰타입"
-        android:textSize="20dp"
-        app:layout_constraintStart_toEndOf="@id/dCardViewType"
-        app:layout_constraintTop_toTopOf="@id/dCardViewType"
-        app:layout_constraintBottom_toBottomOf="@id/dCardViewType" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
